--- a/app/src/main/res/menu/menu_tab_switcher_activity.xml
+++ b/app/src/main/res/menu/menu_tab_switcher_activity.xml
@@ -20,6 +20,12 @@
     tools:ignore="AlwaysShowAction">
 
     <item
+        android:id="@+id/viewMode"
+        android:icon="@drawable/ic_list_view_24"
+        android:title="@string/tabSwitcherListViewMenu"
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/fire"
         android:icon="@drawable/ic_fire"
         android:title="@string/fireMenu"
