Adds new FF for autofill on by default for existing users. Integrates FF into decider logic.

--- a/autofill/autofill-internal/src/main/res/layout/activity_autofill_internal_settings.xml
+++ b/autofill/autofill-internal/src/main/res/layout/activity_autofill_internal_settings.xml
@@ -183,6 +183,12 @@
             app:primaryText="onByDefault" />
 
         <com.duckduckgo.common.ui.view.listitem.TwoLineListItem
+            android:id="@+id/autofillOnForExistingUsersFeature"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:primaryText="onByDefaultForExistingUsers" />
+
+        <com.duckduckgo.common.ui.view.listitem.TwoLineListItem
             android:id="@+id/canSaveCredentialsFeature"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
