--- a/app/src/main/res/menu/menu_tab_switcher_activity.xml
+++ b/app/src/main/res/menu/menu_tab_switcher_activity.xml
@@ -23,6 +23,7 @@
         android:id="@+id/viewMode"
         android:icon="@drawable/ic_list_view_24"
         android:title="@string/tabSwitcherListViewMenu"
+        android:visible="false"
         app:showAsAction="always" />
 
     <item
