--- a/app/src/main/res/menu/menu_tab_switcher_activity.xml
+++ b/app/src/main/res/menu/menu_tab_switcher_activity.xml
@@ -20,7 +20,7 @@
     tools:ignore="AlwaysShowAction">
 
     <item
-        android:id="@+id/viewMode"
+        android:id="@+id/layoutType"
         android:icon="@drawable/ic_list_view_24"
         android:title="@string/tabSwitcherListViewMenu"
         android:visible="false"
