Autofill: new onboarding dialog (#4830)
Task/Issue URL:
https://app.asana.com/0/414730916066338/1207845886789133/f

### Description
Adds a new onboarding dialog + pixels around the new dialog.

### Steps to test this PR

_Feature 1_
- [ ] Fresh install
- [ ] Go to a site where you can test login (fill.dev)
- [ ] login
- [ ] Ensure new onboarding dialog appears and
`autofill_logins_save_login_inline_onboarding_displayed` shown
- [ ] dismiss dialgo and ensure
`autofill_logins_save_login_inline_onboarding_dismissed`
- [ ] try to login again
- [ ] dialog should appear, this time click on never for this site and
validate you see
`autofill_logins_save_login_onboarding_exclude_site_confirmed`
- [ ] go to another site
- [ ] try to login
- [ ] onboarding dialog should appear again
- [ ] click on save password
- [ ] ensure you see
`autofill_logins_save_login_inline_onboarding_confirmed`


### UI changes
| Before  | After |
| ------ | ----- |
!(Upload before screenshot)|(Upload after screenshot)|

--- a/autofill/autofill-impl/src/main/res/layout/content_autofill_save_new_credentials.xml
+++ b/autofill/autofill-impl/src/main/res/layout/content_autofill_save_new_credentials.xml
@@ -40,67 +40,118 @@
             android:id="@+id/autofillDialogContentContainer"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="40dp"
-            app:layout_constraintWidth_max="@dimen/autofillBottomSheetContentMaxWidth"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
             app:layout_constraintStart_toStartOf="@id/guidelineStart"
-            app:layout_constraintEnd_toEndOf="@id/guidelineEnd">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_max="@dimen/autofillBottomSheetContentMaxWidth">
 
             <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/appIcon"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:id="@+id/appIcon"
                 android:importantForAccessibility="no"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_dax_icon" />
 
             <com.duckduckgo.common.ui.view.text.DaxTextView
+                android:id="@+id/dialogTitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/dialogTitle"
+                android:layout_marginTop="@dimen/keyline_2"
                 android:breakStrategy="balanced"
-                android:text="@string/saveLoginDialogTitle"
-                android:layout_marginTop="@dimen/keyline_5"
                 android:gravity="center_horizontal"
+                android:text="@string/saveLoginDialogTitle"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/appIcon"
                 app:typography="h2" />
 
             <TextView
-                tools:ignore="DeprecatedWidgetInXml"
                 android:id="@+id/onboardingSubtitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/keyline_5"
-                android:text="@string/saveLoginDialogSubtitle"
                 android:gravity="center"
+                android:text="@string/saveLoginDialogSubtitle"
                 android:textColor="?autofillDialogOnboardingExplanationColor"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="@id/saveLoginButton"
                 app:layout_constraintStart_toStartOf="@id/saveLoginButton"
-                app:layout_constraintTop_toBottomOf="@id/dialogTitle" />
+                app:layout_constraintTop_toBottomOf="@id/dialogTitle"
+                tools:ignore="DeprecatedWidgetInXml" />
+
+            <LinearLayout
+                android:id="@+id/keyFeaturesContainer"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="gone"
+                android:layout_marginTop="@dimen/keyline_5"
+                app:layout_constraintBottom_toTopOf="@id/saveLoginButton"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/onboardingSubtitle"
+                android:background="@drawable/autofill_rounded_border_container_background">
+
+                <com.duckduckgo.common.ui.view.text.DaxTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:layout_marginTop="@dimen/keyline_3"
+                    android:layout_marginBottom="@dimen/keyline_3"
+                    android:text="@string/onboardingSaveDialogKeyFeatureTitle"
+                    app:typography="caption" />
+
+                <com.duckduckgo.common.ui.view.divider.HorizontalDivider
+                    app:defaultPadding="false"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+                <com.duckduckgo.common.ui.view.listitem.TwoLineListItem
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:primaryText="@string/onboardingSaveDialogFeature1Title"
+                    app:secondaryText="@string/onboardingSaveDialogFeature1Subtitle"
+                    app:leadingIcon="@drawable/ic_autofill_color_24"/>
+
+                <com.duckduckgo.common.ui.view.listitem.TwoLineListItem
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:primaryText="@string/onboardingSaveDialogFeature2Title"
+                    app:secondaryText="@string/onboardingSaveDialogFeature2Subtitle"
+                    app:leadingIcon="@drawable/ic_lock_color_24"/>
+
+                <com.duckduckgo.common.ui.view.listitem.TwoLineListItem
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:primaryText="@string/onboardingSaveDialogFeature3Title"
+                    app:secondaryText="@string/onboardingSaveDialogFeature3Subtitle"
+                    app:leadingIcon="@drawable/ic_sync_color_24"/>
+
+            </LinearLayout>
 
             <com.duckduckgo.common.ui.view.button.DaxButtonPrimary
                 android:id="@+id/saveLoginButton"
                 android:layout_width="0dp"
-                app:buttonSize="large"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/keyline_5"
                 android:text="@string/saveLoginDialogButtonSave"
+                app:buttonSize="large"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/onboardingSubtitle" />
+                app:layout_constraintTop_toBottomOf="@id/keyFeaturesContainer" />
 
             <com.duckduckgo.common.ui.view.button.DaxButtonGhost
                 android:id="@+id/neverSaveForThisSiteButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:buttonSize="large"
                 android:text="@string/saveLoginDialogNeverForThisSite"
+                app:buttonSize="large"
                 app:layout_constraintEnd_toEndOf="@id/saveLoginButton"
                 app:layout_constraintStart_toStartOf="@id/saveLoginButton"
                 app:layout_constraintTop_toBottomOf="@id/saveLoginButton" />
