--- a/duckplayer/duckplayer-impl/src/main/res/layout/modal_duck_player.xml
+++ b/duckplayer/duckplayer-impl/src/main/res/layout/modal_duck_player.xml
@@ -1,4 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2024 DuckDuckGo
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~     http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,14 +24,13 @@
     android:layout_height="match_parent"
     android:clipToPadding="false"
     android:paddingTop="@dimen/daxDialogContentPaddingTop"
-    tools:context=".DuckPlayerBottomSheet">
+    tools:context="com.duckduckgo.duckplayer.impl.ui.DuckPlayerPrimeBottomSheet">
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:id="@+id/animationContainer"
         android:layout_height="wrap_content"
         app:cardCornerRadius="@dimen/keyline_2"
-        app:cardBackgroundColor="@color/gray20"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -34,6 +49,20 @@
             app:layout_constraintTop_toTopOf="parent"/>
 
     </androidx.cardview.widget.CardView>
+
+    <ImageButton
+        android:id="@+id/closeButton"
+        android:src="@drawable/ic_close_24"
+        android:layout_marginEnd="@dimen/keyline_4"
+        android:layout_marginBottom="@dimen/keyline_1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/animationContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?actionBarItemBackground"
+        android:layout_gravity="end"
+        android:contentDescription="@string/duck_player_close_modal_content_description"
+        />
 
     <com.duckduckgo.common.ui.view.text.DaxTextView
         android:id="@+id/title"
