--- a/autofill/autofill-impl/src/main/res/values-hu/strings-autofill-impl.xml
+++ b/autofill/autofill-impl/src/main/res/values-hu/strings-autofill-impl.xml
@@ -22,7 +22,7 @@
     <string name="saveLoginDialogButtonSave">Jelszó mentése</string>
     <string name="saveLoginMissingUsernameDialogButtonSave">Jelszó mentése</string>
     <string name="saveLoginDialogNotNow">Mentés mellőzése</string>
-    <string name="saveLoginDialogTitle">A DuckDuckGo mentse a jelszót?</string>
+    <string name="saveLoginDialogTitle">Mented a jelszót?</string>
     <string name="saveLoginDialogMoreOptionsButtonLabel">További lehetőségek</string>
 
     <string name="useSavedLoginDialogTitle">Mentett jelszót használsz?</string>
@@ -123,7 +123,7 @@
     <string name="credentialManagementNoLoginsSavedTitle">Még nincsenek mentett jelszavak</string>
     <string name="credentialManagementAutofillToggleLabel">Jelszavak mentése és automatikus kitöltése</string>
     <string name="credentialManagementAutofillToggleSubtitle">A jelszavakat az eszközöd biztonságosan tárolja</string>
-    <string name="saveLoginDialogSubtitle">A jelszavakat az eszközöd biztonságosan tárolja.</string>
+    <string name="saveLoginDialogSubtitle">A DuckDuckGóban elérhető Jelszavak és automatikus kitöltés funkció biztonságosan tárolja a jelszavakat az eszközön.</string>
     <string name="autofillManagementAddLogin">Jelszó hozzáadása</string>
     <string name="credentialManagementEditLoginTitleHint">Cím</string>
     <string name="autofillManagementDeletedConfirmation">Jelszó törölve</string>
@@ -221,5 +221,15 @@
     <string name="autofillManagementReportBreakageDialogNegativeButton">Mégsem</string>
     <string name="autofillManagementReportBreakageSuccessMessage">Köszönjük! A jelentésed segít nekünk abban, hogy a DuckDuckGo mindenki számára jobb élményt nyújthasson.</string>
 
+    <!-- Save Dialog -->
+    <string name="onboardingSaveDialogKeyFeatureTitle">Főbb jellemzők</string>
+    <string name="onboardingSaveDialogFeature1Title">Zökkenőmentes bejelentkezés</string>
+    <string name="onboardingSaveDialogFeature1Subtitle">Nincs szükség a bejelentkezési adatok megjegyzésére.</string>
+    <string name="onboardingSaveDialogFeature2Title">Biztonságos tárhely</string>
+    <string name="onboardingSaveDialogFeature2Subtitle">A jelszavakat a rendszer titkosítja, az eszközön tárolja, és az Androidhoz használt mintával vagy PIN-kóddal zárolja.</string>
+    <string name="onboardingSaveDialogFeature3Title">Eszközök közötti szinkronizálás</string>
+    <string name="onboardingSaveDialogFeature3Subtitle">Végpontok közötti titkosítást használ, és ha készen áll a használatára, egyszerűen beállítható.</string>
 
+    <string name="autofillDisableInSettingsSnackbarText">A jelszó mentése bármikor kikapcsolható.</string>
+    <string name="autofillDisableInSettingsSnackbarAction">Beállítások megnyitása</string>
 </resources>
